tests/baselines/reference/parserInterfaceDeclaration6.errors.txt
==== tests/cases/conformance/parser/ecmascript5/InterfaceDeclarations/parserInterfaceDeclaration6.ts (2 errors) ====
    export export interface I {
           ~~~~~~
!!! error TS1030: 'export' modifier already seen.
                            ~
!!! error TS1148: Cannot compile external modules unless the '--module' flag is provided.
    }